--- a/style.css
+++ b/style.css
@@ -729,7 +729,7 @@ align-items: center;
 }
 
 .contact .row form .inputBox input{
-    color: white;
+    color: black;
     background-color:white;
 
 }
